<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gris"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateAccount">

    <!-- Spinner para seleccionar el tipo de cuenta -->
    <Spinner
        android:id="@+id/spinnerAccountType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/account_types"
        android:hint="@string/elija_un_tipo_de_cuenta"
        android:spinnerMode="dropdown"
        android:paddingStart="10dp"
        android:textColor="@color/gris"
        android:background="@drawable/spinner_background"
        tools:ignore="RtlSymmetry" />

    <!-- EditText para el balance -->
    <EditText
        android:id="@+id/etBalance"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/balance"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/gris"
        android:textColor="@color/negro"
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <!-- Botón para crear cuenta -->
    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azul"
        android:textColor="@color/blanco"
        android:layout_gravity="center"
        android:text="@string/crear_cuenta"
        android:layout_marginTop="25dp"/>

</LinearLayout>
