<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fondo"
    android:padding="16dp"
    tools:context=".AccountDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Botón de retroceso -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul_acero">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/back"
                android:contentDescription="@string/volver"
                android:layout_gravity="start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar_al_inicio"
                android:textColor="@color/blanco"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <!-- Título -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalles_de_la_cuenta"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:gravity="center" />

        <!-- Tarjeta -->
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/card_background"
            android:layout_margin="16dp"
            android:elevation="4dp">

            <!-- Contenedor del encabezado -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Nombre del banco -->
                <TextView
                    android:id="@+id/tv_bank_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EDUA"
                    android:textColor="@color/dorado_clasico"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_flex_regular" />

                <!-- Logo de Visa
                <ImageView
                    android:id="@+id/logo_visa"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:src="@drawable/visa_logo"
                    android:layout_marginStart="230dp"
                    android:contentDescription="Logo de Visa" /> -->
            </LinearLayout>

            <!-- Número de cuenta -->
            <TextView
                android:id="@+id/tv_accountid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Número de cuenta"
                android:textColor="@color/blanco"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_flex"/>

            <!-- Balance -->
            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Balance"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_flex"
                android:layout_marginStart="240dp"/>
        </LinearLayout>

        <!-- Botones de acciones -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btn_transfer"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="Transferir"
                android:drawableLeft="@drawable/transfer"
                android:backgroundTint="@color/azul_acero"
                android:textColor="@color/blanco"
                android:textSize="11sp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn_history"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/azul_acero"
                android:drawableLeft="@drawable/history"
                android:text="Historial"
                android:textColor="@color/blanco"
                android:textSize="11sp" />
        </LinearLayout>

        <!-- Información de la cuenta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="@color/azul_acero"
            android:elevation="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Número de cuenta:"
                android:textColor="@color/blanco"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_accountid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Numero de cuenta*"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre del propietario:"
                android:textColor="@color/blanco"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_account_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Nombre completo del propietario*"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tipo de cuenta:"
                android:textColor="@color/blanco"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_account_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Tipo de cuenta*"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha de creación:"
                android:textColor="@color/blanco"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_account_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*Fecha de creacion*"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <!-- Botón eliminar cuenta
        <Button
            android:id="@+id/btn_delete_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Eliminar cuenta"
            android:backgroundTint="@color/rojo_apagado"
            android:textColor="@color/blanco"
            android:drawableLeft="@drawable/remove"
            android:layout_marginTop="16dp"
            android:elevation="4dp" /> -->
    </LinearLayout>


</ScrollView>